activation.cpp
@@ -607,6 +607,9 @@ bool Workspace::allowClientActivation(const KWin::AbstractClient *c, xcb_timesta
         return true;
     }
 
+    if (!c->isOnCurrentDesktop()) // we allowed explicit self-activation across virtual desktops
+        return false; // inside a client or if no client was active, but not otherwise
+
     // High FPS, not intr-client change. Only allow if the active client has only minor interest
     if (level > FSP::Medium && protection > FSP::Low)
         return false;
